--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
     />
     <script src="https://kit.fontawesome.com/5ea815c1d0.js"></script>
 
-    <title>React App</title>
+    <title>Fun Foodies</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
